--- a/src/style/home.css
+++ b/src/style/home.css
@@ -14,7 +14,7 @@
     font-weight: 300;
     font-style: normal;
 }
-.container {
+.container-home {
     height: 100%;
     display: flex;
     overflow: hidden;
