--- a/src/style/general.css
+++ b/src/style/general.css
@@ -53,7 +53,7 @@
     background: transparent;
     cursor: pointer;
     color: #f1f1f1;
-    transition: color 0.6s;
+    transition: 0.3s;
   }
   
   nav button:hover {
@@ -61,6 +61,12 @@
     border-bottom: solid 1px #f1f1f1;
     background-color: #150E04;
   }
+  nav button:active {
+    background-color: #d42727;
+    color: #fff;
+    border: none;
+    outline: none;
+}
   
   .footer {
     width: 100%;
