--- a/src/style/menu.css
+++ b/src/style/menu.css
@@ -8,15 +8,18 @@
 }
 
 .burger-card {
-    background-color: #fff;
+    background-color: #f9f9f9ff;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin: 10px;
     padding: 20px;
     width: 250px;
     text-align: center;
+    transition: 0.2s;
 }
-
+.burger-card:hover {
+    transform: scale(1.05);
+}
 .burger-card img {
     border-radius: 8px;
     width: 100%;
@@ -33,4 +36,7 @@
     font-family: 'Open Sans', sans-serif;
     margin: 5px 0;
     color: #666;
+}
+.burger-card .burger-price{
+    color: #111;
 }
